[package]
name = "tonic-async-interceptor"
authors = ["Joe Dahlquist <joe@arcanyx.com>"]
categories = ["web-programming", "network-programming", "asynchronous", "authentication"]
description = "Async variant of Tonic's interceptor function"
documentation = "https://docs.rs/tonic-async-interceptor"
edition = "2021"
homepage = "https://github.com/arcanyx-pub/tonic-async-interceptor"
keywords = ["async", "grpc", "tonic", "protobuf", "interceptor"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/arcanyx-pub/tonic-async-interceptor"
version = "0.14.1"

[dependencies]
bytes = "1.0.0"
http = "1.1.0"
http-body = "1.0.0"
pin-project = "1.1.0"
tonic = "0.14.1"
tower-layer = "0.3.0"
tower-service = "0.3.0"

[dev-dependencies]
http-body-util = "0.1.2"
tokio = {version = "1.38.0", features = ["rt", "macros"]}
tower = {version = "0.5.0", features = ["full"]}
